force-app/main/default/objects/Wellbeing_CheckIn__c/Wellbeing_CheckIn__c.object-meta.xml
<CustomObject>
    <description>Captures burnout/strain signals observed in conversation and the guardrail escalation outcome. Non-clinical.</description>
    <label>Wellbeing Check-In</label>
    <nameField>
        <displayFormat>WB-{00000}</displayFormat>
        <label>Check-In Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wellbeing Check-Ins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>