force-app/main/default/objects/Wellbeing_CheckIn__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Wellbeing Check-Ins</relationshipLabel>
    <relationshipName>Wellbeing_CheckIns</relationshipName>
    <type>Lookup</type>
    <description>Link to human-handoff Case when escalated.</description>
</CustomField>