force-app/main/default/objects/Wellbeing_CheckIn__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Wellbeing Check-Ins</relationshipLabel>
    <relationshipName>Wellbeing_CheckIns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The caregiver.</description>
</CustomField>