force-app/main/default/objects/Wellbeing_CheckIn__c/fields/Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Status__c</fullName>
    <label>Escalation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <description>Tracks the guardrail outcome.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Resources_Offered</fullName><default>false</default><label>Resources Offered</label></value>
            <value><fullName>Case_Created</fullName><default>false</default><label>Case Created</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>