force-app/main/default/objects/Wellbeing_CheckIn__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>0-10 rough strain indicator, not a diagnosis.</description>
</CustomField>