force-app/main/default/objects/Wellbeing_CheckIn__c/fields/Strain_Signals__c.field-meta.xml
<CustomField>
    <fullName>Strain_Signals__c</fullName>
    <label>Strain Signals</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Detected cues (non-clinical); audit of what the agent observed.</description>
</CustomField>